--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="">
     <div id="app">
       <header>
-        <img src="/assets/logo.svg" alt="" />
+        <img src="./assets/Logo.svg" alt="" />
       </header>
       <main id="cards"></main>
     </div>
